--- a/src/ServiceControl/Dockerfile
+++ b/src/ServiceControl/Dockerfile
@@ -2,6 +2,7 @@
 # https://github.com/dotnet/dotnet-docker/blob/main/samples/README.md
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG TARGETARCH
+ARG VERSION
 WORKDIR /
 
 # Not copying csproj and restore as distinct layers for now, why do we need/want that?
@@ -14,12 +15,22 @@ RUN dotnet build src/ServiceControl/ServiceControl.csproj --configuration Releas
 
 # final stage/image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
+
+LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceControl
+LABEL org.opencontainers.image.authors="Particular Software"
+LABEL org.opencontainers.image.url=https://docs.particular.net/servicecontrol/
+LABEL org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/
+LABEL org.opencontainers.image.licenses=RPL-1.5
+LABEL org.opencontainers.image.version=$VERSION
+LABEL org.opencontainers.image.title=ServiceControl
+LABEL org.opencontainers.image.description="ServiceControl primary instance"
+
 EXPOSE 33333
 WORKDIR /
 COPY --from=build /deploy/Particular.ServiceControl ./app
 
-RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
-VOLUME /var/servicecontrol
+#RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
+#VOLUME /var/servicecontrol
 
 ENV "ServiceControl/PersistenceType"="RavenDB" \
     "ServiceControl/LogPath"="/var/servicecontrol/logs" \
