Restore volume (for now) so that instance can run with current code, but remove from monitoring instance that definitely doesn't need it

--- a/src/ServiceControl/Dockerfile
+++ b/src/ServiceControl/Dockerfile
@@ -30,8 +30,8 @@ EXPOSE 33333
 WORKDIR /
 COPY --from=build /deploy/Particular.ServiceControl ./app
 
-#RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
-#VOLUME /var/servicecontrol
+RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
+VOLUME /var/servicecontrol
 
 ENV "ServiceControl/PersistenceType"="RavenDB" \
     "ServiceControl/LogPath"="/var/servicecontrol/logs" \
