One LABEL statement - doesn't make image smaller but fewer layers to look on inspection

--- a/src/ServiceControl.Audit/Dockerfile
+++ b/src/ServiceControl.Audit/Dockerfile
@@ -17,14 +17,13 @@ RUN dotnet build src/ServiceControl.Audit/ServiceControl.Audit.csproj --configur
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 ARG VERSION
 
-LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceControl
-LABEL org.opencontainers.image.authors="Particular Software"
-LABEL org.opencontainers.image.url=https://docs.particular.net/servicecontrol/
-LABEL org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/
-LABEL org.opencontainers.image.licenses=RPL-1.5
-LABEL org.opencontainers.image.version=$VERSION
-LABEL org.opencontainers.image.title=ServiceControl.Audit
-LABEL org.opencontainers.image.description="ServiceControl audit instance"
+LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceControl \
+      org.opencontainers.image.authors="Particular Software" \
+      org.opencontainers.image.url=https://docs.particular.net/servicecontrol/ \
+      org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/ \
+      org.opencontainers.image.version=$VERSION \
+      org.opencontainers.image.title=ServiceControl.Audit \
+      org.opencontainers.image.description="ServiceControl audit instance"
 
 EXPOSE 44444
 WORKDIR /
