--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -169,6 +169,8 @@ jobs:
         run: dotnet tool install --global minver-cli
       - name: Determine versions
         run: echo "MinVerVersion=$(minver)" >> $GITHUB_ENV
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3.3.0
       - name: Build image
         run: docker buildx build --tag ${{ matrix.name }} --file src/${{ matrix.project }}/Dockerfile --build-arg VERSION=${{ env.MinVerVersion }} --platform linux/arm64,linux/arm,linux/amd64 .
       - name: List images
