--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -172,7 +172,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.3.0
       - name: Build image
-        run: docker buildx build --tag ${{ matrix.name }} --file src/${{ matrix.project }}/Dockerfile --build-arg VERSION=${{ env.MinVerVersion }} --platform linux/arm64,linux/arm,linux/amd64 .
+        run: docker buildx build --tag ${{ matrix.name }} --file src/${{ matrix.project }}/Dockerfile --load --build-arg VERSION=${{ env.MinVerVersion }} --platform linux/arm64,linux/arm,linux/amd64 .
       - name: List images
         run: docker images
       - name: Log in to GitHub container registry
