--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -171,21 +171,9 @@ jobs:
         run: echo "MinVerVersion=$(minver)" >> $GITHUB_ENV
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.3.0
-      - name: Build image
-        run: docker buildx build --tag ${{ matrix.name }} --file src/${{ matrix.project }}/Dockerfile --load --build-arg VERSION=${{ env.MinVerVersion }} --platform linux/arm64,linux/arm,linux/amd64 .
-      - name: List images
-        run: docker images
       - name: Log in to GitHub container registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-      - name: Push image
+      - name: Build image
         env:
           TAG_NAME: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || env.MinVerVersion }}
-        run: |
-          IMAGE_NAME=${{ matrix.name }}
-          IMAGE_ID=ghcr.io/particular/$IMAGE_NAME
-
-          echo "Tagging image $IMAGE_NAME as $IMAGE_ID:$TAG_NAME"
-          docker tag $IMAGE_NAME $IMAGE_ID:$TAG_NAME
-
-          echo "Pushing $IMAGE_ID:$TAG_NAME"
-          docker push $IMAGE_ID:$TAG_NAME
+        run: docker buildx build --push --tag ghcr.io/particular/${{ matrix.name }}:${{ env.TAG_NAME }} --file src/${{ matrix.project }}/Dockerfile --build-arg VERSION=${{ env.MinVerVersion }} --platform linux/arm64,linux/arm,linux/amd64 .
