introduced the licensing.report nuget where common functionality is and removed the code it replaced

--- a/src/Particular.LicensingComponent.UnitTests/Particular.LicensingComponent.UnitTests.csproj
+++ b/src/Particular.LicensingComponent.UnitTests/Particular.LicensingComponent.UnitTests.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="NUnit" />
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Particular.Approvals" />
+    <PackageReference Include="Particular.LicensingComponent.Report" />
   </ItemGroup>
 
 </Project>
