--- a/src/ServiceControl.Monitoring/Dockerfile
+++ b/src/ServiceControl.Monitoring/Dockerfile
@@ -1,26 +1,29 @@
-# Learn about building .NET container images:
-# https://github.com/dotnet/dotnet-docker/blob/main/samples/README.md
+# Build image
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG TARGETARCH
 WORKDIR /
+ENV CI=true
 
-# Not copying csproj and restore as distinct layers for now, why do we need/want that?
 COPY . .
-RUN dotnet restore src --arch $TARGETARCH
-
-# copy and publish app and libraries.
-RUN dotnet build src/ServiceControl.Monitoring/ServiceControl.Monitoring.csproj --configuration Release -graph --no-restore --arch $TARGETARCH
+RUN dotnet build src/ServiceControl.Monitoring/ServiceControl.Monitoring.csproj --configuration Release -graph --arch $TARGETARCH
 
 
-# final stage/image
+# Runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
-EXPOSE 33633
+ARG VERSION
 WORKDIR /
-COPY --from=build /deploy/Particular.ServiceControl.Monitoring ./app
 
-# Probably not needed but don't want to remove yet
-RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
-VOLUME /var/servicecontrol
+LABEL org.opencontainers.image.source=https://github.com/Particular/ServiceControl \
+      org.opencontainers.image.authors="Particular Software" \
+      org.opencontainers.image.url=https://docs.particular.net/servicecontrol/ \
+      org.opencontainers.image.documentation=https://docs.particular.net/servicecontrol/ \
+      org.opencontainers.image.version=$VERSION \
+      org.opencontainers.image.title=ServiceControl.Monitoring \
+      org.opencontainers.image.description="ServiceControl monitoring instance"
+
+EXPOSE 33633
+
+COPY --from=build /deploy/Particular.ServiceControl.Monitoring ./app
 
 USER $APP_UID
 ENTRYPOINT ["./app/ServiceControl.Monitoring"]
