--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.html",
   "scripts": {
     "dev": "vite",
+    "dev:mocks": "cross-env NODE_ENV=dev-mocks vite",
     "build": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
@@ -47,6 +48,7 @@
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-import": "^2.29.1",
@@ -54,12 +56,17 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "eslint-plugin-vue": "^9.20.1",
     "jsdom": "^24.0.0",
-    "msw": "^2.2.2",
+    "msw": "^2.2.4",
     "prettier": "^3.2.3",
     "typescript": "^5.3.3",
     "vite": "^5.1.7",
     "vite-plugin-checker": "^0.6.4",
     "vitest": "^1.6.0",
     "vue-tsc": "^1.8.25"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
