Refactor handling of environment variables to allow POSIX style (#4204)
* Use only POSIX_STYLE env vars on Linux/containers

* Different formats only on Linux

* Updates from code review

* Missed a quote

--- a/src/ServiceControl/Dockerfile
+++ b/src/ServiceControl/Dockerfile
@@ -27,10 +27,10 @@ COPY --from=build /deploy/Particular.ServiceControl ./app
 RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
 VOLUME /var/servicecontrol
 
-ENV "ServiceControl/PersistenceType"="RavenDB" \
-    "ServiceControl/LogPath"="/var/servicecontrol/logs" \
-    "ServiceControl/ForwardErrorMessages"="False" \
-    "ServiceControl/ErrorRetentionPeriod"="15"
+ENV PERSISTENCETYPE=RavenDB \
+    LOGPATH=/var/servicecontrol/logs \
+    FORWARDERRORMESSAGES=False \
+    ERRORRETENTIONPERIOD=15
 
 USER $APP_UID
 ENTRYPOINT ["./app/ServiceControl"]
