Need these env settings to match SCMU defaults that differ from in-code defaults, using MixedCase as that's the last option read and thus most easily overridable

--- a/src/ServiceControl.Audit/Dockerfile
+++ b/src/ServiceControl.Audit/Dockerfile
@@ -27,10 +27,9 @@ COPY --from=build /deploy/Particular.ServiceControl.Audit ./app
 RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
 VOLUME /var/servicecontrol
 
-ENV PERSISTENCETYPE=RavenDB \
-    LOGPATH=/var/servicecontrol/logs \
-    FORWARDAUDITMESSAGES=False \
-    AUDITRETENTIONPERIOD=14
+ENV PersistenceType=RavenDB \
+    LogPath=/var/servicecontrol/logs \
+    AuditRetentionPeriod=7
 
 USER $APP_UID
 ENTRYPOINT ["./app/ServiceControl.Audit"]
