--- a/src/ServiceControl/Dockerfile
+++ b/src/ServiceControl/Dockerfile
@@ -27,10 +27,10 @@ COPY --from=build /deploy/Particular.ServiceControl ./app
 RUN mkdir -p /var/servicecontrol && chown -R $APP_UID /var/servicecontrol
 VOLUME /var/servicecontrol
 
-ENV PERSISTENCETYPE=RavenDB \
-    LOGPATH=/var/servicecontrol/logs \
-    FORWARDERRORMESSAGES=False \
-    ERRORRETENTIONPERIOD=15
+ENV PersistenceType=RavenDB \
+    LogPath=/var/servicecontrol/logs \
+    ForwardErrorMessages=false \
+    ErrorRetentionPeriod=15
 
 USER $APP_UID
 ENTRYPOINT ["./app/ServiceControl"]
