--- a/src/ServiceControl.Audit/App.config
+++ b/src/ServiceControl.Audit/App.config
@@ -11,23 +11,23 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!-- DEVS - Pick a transport to run Auditing instance on -->
     <!--<add key="ServiceControl.Audit/TransportType" value="AmazonSQS" />-->
-    <add key="ServiceControl.Audit/TransportType" value="LearningTransport" />
+    <!-- <add key="ServiceControl.Audit/TransportType" value="LearningTransport" /> -->
     <!--<add key="ServiceControl.Audit/TransportType" value="AzureStorageQueue" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="MSMQ" />-->
     <!--<add key="ServiceControl.Audit/TransportType" value="NetStandardAzureServiceBus" />-->
-    <!--<add key="ServiceControl.Audit/TransportType" value="RabbitMQ.QuorumConventionalRouting" />-->
+    <add key="ServiceControl.Audit/TransportType" value="RabbitMQ.QuorumConventionalRouting" />
     <!--<add key="ServiceControl.Audit/TransportType" value="SQLServer" />-->
 
     <!-- DEVS - Pick a persistence to run Auditing instance on. -->
-    <add key="ServiceControl.Audit/PersistenceType" value="InMemory" />
-    <!--<add key="ServiceControl.Audit/PersistenceType" value="RavenDB" />-->
+    <!-- <add key="ServiceControl.Audit/PersistenceType" value="InMemory" /> -->
+    <add key="ServiceControl.Audit/PersistenceType" value="RavenDB" />
   </appSettings>
   <connectionStrings>
     <!-- DEVS - Pick a transport connection string to match chosen transport above -->
 
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <add name="NServiceBus/Transport" connectionString="" />
+    <add name="NServiceBus/Transport" connectionString="host=localhost" />
 
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
