--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -16,9 +16,9 @@ These settings are only here so that we can debug ServiceControl while developin
     <!-- <add key="ServiceControl/TransportType" value="LearningTransport" /> -->
     <!--<add key="ServiceControl/TransportType" value="AmazonSQS" />-->
     <!--<add key="ServiceControl/TransportType" value="AzureStorageQueue" />-->
-    <add key="ServiceControl/TransportType" value="MSMQ" />
+    <!--<add key="ServiceControl/TransportType" value="MSMQ" />-->
     <!--<add key="ServiceControl/TransportType" value="NetStandardAzureServiceBus" />-->
-    <!-- <add key="ServiceControl/TransportType" value="RabbitMQ.QuorumConventionalRouting" /> -->
+    <add key="ServiceControl/TransportType" value="RabbitMQ.QuorumConventionalRouting" />
     <!--<add key="ServiceControl/TransportType" value="SQLServer" />-->
 
     <add key="ServiceControl/PersistenceType" value="RavenDB" />
@@ -28,7 +28,7 @@ These settings are only here so that we can debug ServiceControl while developin
 
     <!-- Learning -->
     <!-- If the LearningTransport connectionString is empty, it will default to the solution directory when running/debugging from the IDE -->
-    <!-- <add name="NServiceBus/Transport" connectionString="host=localhost" /> -->
+    <add name="NServiceBus/Transport" connectionString="host=localhost" />
     
     <!--Amazon SQS -->
     <!--<add name="NServiceBus/Transport" connectionString="Region=;QueueNamePrefix=;TopicNamePrefix=;AccessKeyId=;SecretAccessKey=;S3BucketForLargeMessages=;S3KeyPrefix=" />-->
@@ -37,7 +37,7 @@ These settings are only here so that we can debug ServiceControl while developin
     <!--<add name="DefaultEndpointsProtocol=[http|https];AccountName=;AccountKey=;Subscriptions Table=tablename" />-->
 
     <!--MSMQ -->
-    <add name="NServiceBus/Transport" connectionString="" />
+    <!--<add name="NServiceBus/Transport" connectionString="" />-->
 
     <!--NetStandardAzureServiceBus -->
     <!--<add name="NServiceBus/Transport" connectionString="Endpoint=sb://[namespace].servicebus.windows.net; SharedSecretIssuer=;SharedSecretValue=;QueueLengthQueryDelayInterval=;TopicName=default-is-bundle-1" />-->
