Use temp path for databases and logs

--- a/src/ServiceControl/App.config
+++ b/src/ServiceControl/App.config
@@ -11,7 +11,8 @@ These settings are only here so that we can debug ServiceControl while developin
     <add key="ServiceControl/HostName" value="localhost" />
     <add key="ServiceControl/DatabaseMaintenancePort" value="33334" />
     <add key="ServiceControl/AllowMessageEditing" value="true" />
-
+    <add key="ServiceControl/DbPath" value="%TEMP%/.servicecontrol/db" />
+    <add key="ServiceControl/LogPath" value="%TEMP%/.servicecontrol/logs"/>
     <!-- DEVS - Pick a transport to run Primary instance on -->
     <!-- <add key="ServiceControl/TransportType" value="LearningTransport" /> -->
     <!--<add key="ServiceControl/TransportType" value="AmazonSQS" />-->
