--- a/src/ServiceControl.Audit/App.config
+++ b/src/ServiceControl.Audit/App.config
@@ -21,6 +21,8 @@ These settings are only here so that we can debug ServiceControl while developin
     <!-- DEVS - Pick a persistence to run Auditing instance on. -->
     <!-- <add key="ServiceControl.Audit/PersistenceType" value="InMemory" /> -->
     <add key="ServiceControl.Audit/PersistenceType" value="RavenDB" />
+    <add key="ServiceControl.Audit/DbPath" value="%TEMP%/.servicecontrol.audit/db" />
+    <add key="ServiceControl.Audit/LogPath" value="%TEMP%/.servicecontrol.audit/logs"/>
   </appSettings>
   <connectionStrings>
     <!-- DEVS - Pick a transport connection string to match chosen transport above -->
