--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -203,12 +203,20 @@ jobs:
           TAG_NAME: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.number) || env.MinVerVersion }}
         shell: pwsh
         run: |
+          Write-Output "Determining RavenDB version from Directory.Packages.props file"
+          [xml]$packagesFile = Get-Content src/Directory.Packages.props
+          $RavenVersion = $packagesFile.selectNodes("//Project/ItemGroup/PackageVersion[@Include='RavenDB.Embedded']").Version
+
+          if (-not $RavenVersion) { throw "Unable to determine RavenDB server version from Directory.Packages.props" }
+
+          Write-Output "Determining container variants to build"
           $containers = cat src/ServiceControl.RavenDB/containers.json | ConvertFrom-Json
           $containers | ForEach-Object -Process {
             $FULLTAG="${{ env.TAG_NAME }}-$($_.tag)"
-            $BASETAG="5.4.118-ubuntu.22.04-$($_.tag)"
-            echo "Building $FULLTAG for architecture $($_.arch) from $BASETAG"
+            $BASETAG="$($RavenVersion)-ubuntu.22.04-$($_.tag)"
+            Write-Output "::group::Building $FULLTAG for architecture $($_.arch) from $BASETAG"
             docker build -t ghcr.io/particular/servicecontrol-ravendb:$FULLTAG --file src/ServiceControl.RavenDB/Dockerfile --build-arg VERSION=${{ env.MinVerVersion }} --build-arg BASETAG=$BASETAG --platform linux/$($_.arch) .
+            Write-Output "::endgroup::"
           }
       - name: List local images
         run: docker images
