Centralize RavenLicense.json

--- a/src/ServiceControl.RavenDB/ServiceControl.RavenDB.csproj
+++ b/src/ServiceControl.RavenDB/ServiceControl.RavenDB.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="RavenDB.Embedded" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="RavenLicense.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+
 </Project>
