Refactor EmbeddedDatabase into one

--- a/src/ServiceControl.RavenDB/ServiceControl.RavenDB.csproj
+++ b/src/ServiceControl.RavenDB/ServiceControl.RavenDB.csproj
@@ -3,10 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ByteSize" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
+    <PackageReference Include="NServiceBus" />
     <PackageReference Include="RavenDB.Embedded" />
   </ItemGroup>
 
