Brining standalone throughput tool into this repo

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -32,6 +32,7 @@
     <PackageVersion Include="Microsoft.IdentityModel.Abstractions" Version="7.4.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageVersion Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
+    <PackageVersion Include="Mindscape.Raygun4Net.AspNetCore" Version="10.1.2"/>
     <PackageVersion Include="Mindscape.Raygun4Net.NetCore" Version="10.1.2" />
     <PackageVersion Include="NLog.Extensions.Logging" Version="5.3.11" />
     <PackageVersion Include="NServiceBus" Version="9.0.0" />
@@ -65,6 +66,7 @@
     <PackageVersion Include="RavenDB.Embedded" Version="5.4.118" />
     <PackageVersion Include="ReactiveUI.WPF" Version="20.0.1" />
     <PackageVersion Include="ServiceControl.Contracts" Version="4.0.0" />
+    <PackageVersion Include="System.CommandLine" Version="2.0.0-beta4.22272.1"/>
     <PackageVersion Include="System.Configuration.ConfigurationManager" Version="8.0.0" />
     <PackageVersion Include="System.Diagnostics.PerformanceCounter" Version="8.0.0" />
     <PackageVersion Include="System.DirectoryServices.AccountManagement" Version="8.0.0" />
